--- a/PS2/.classpath
+++ b/PS2/.classpath
@@ -23,5 +23,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/b/Downloads/poi-3.13.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
